[gd_scene load_steps=17 format=2]

[ext_resource path="res://LabyrinthSecrets.gd" type="Script" id=1]
[ext_resource path="res://hud/Hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://tileset/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://camera/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://keys/key_blue/KeyBlue.tscn" type="PackedScene" id=5]
[ext_resource path="res://keys/key_green/KeyGrenn.tscn" type="PackedScene" id=6]
[ext_resource path="res://keys/key_red/KeyRed.tscn" type="PackedScene" id=7]
[ext_resource path="res://mine_one/MineOne.tscn" type="PackedScene" id=8]
[ext_resource path="res://mine_two/MineTwo.tscn" type="PackedScene" id=9]
[ext_resource path="res://sezam/Sezam.tscn" type="PackedScene" id=10]
[ext_resource path="res://coins/CopperCoin.tscn" type="PackedScene" id=11]
[ext_resource path="res://coins/SilverCoin.tscn" type="PackedScene" id=12]
[ext_resource path="res://coins/GoldCoin.tscn" type="PackedScene" id=13]
[ext_resource path="res://elixir/Elixir.tscn" type="PackedScene" id=14]
[ext_resource path="res://tower/Tower.tscn" type="PackedScene" id=15]
[ext_resource path="res://mech/Mech.tscn" type="PackedScene" id=16]

[node name="LabyrinthSecrets" type="Node2D"]
script = ExtResource( 1 )

[node name="Hud" parent="." instance=ExtResource( 2 )]

[node name="TileMapGround" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( -196616, 1, 0, -196615, 1, 0, -196614, 1, 0, -196613, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -262132, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -262128, 1, 0, -262127, 1, 0, -131080, 1, 0, -131079, -1610612734, 0, -131078, -1610612734, 0, -131077, -1610612734, 0, -131076, -1610612734, 0, -131075, -1610612734, 0, -131074, -1610612734, 0, -131073, -1610612734, 0, -196608, -1610612734, 0, -196607, -1610612734, 0, -196606, -1610612734, 0, -196605, -1610612734, 0, -196604, -1610612734, 0, -196603, -1610612734, 0, -196602, -1610612734, 0, -196601, -1610612734, 0, -196600, -1610612734, 0, -196599, -1610612734, 0, -196598, -1610612734, 0, -196597, -1610612734, 0, -196596, -1610612734, 0, -196595, -1610612734, 0, -196594, -1610612734, 0, -196593, -1610612734, 0, -196592, -1610612734, 0, -196591, 1, 0, -65544, 1, 0, -65543, -1610612734, 0, -65542, -1610612734, 0, -65541, -1610612734, 0, -65540, -1610612734, 0, -65539, -1610612734, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, 2, 0, -131061, 2, 0, -131060, 2, 0, -131059, 2, 0, -131058, 2, 0, -131057, -1610612734, 0, -131056, -1610612734, 0, -131055, 1, 0, -8, 1, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 9, 0, -2, 9, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 2, 0, -65521, -1610612734, 0, -65520, -1610612734, 0, -65519, 1, 0, 65528, 1, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 9, 0, 65534, 9, 0, 65535, 1, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, -1610612734, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 1, 0, 14, 2, 0, 15, -1610612734, 0, 16, -1610612734, 0, 17, 1, 0, 131064, 1, 0, 131065, -1610612734, 0, 131066, -1610612734, 0, 131067, -1610612734, 0, 131068, -1610612734, 0, 131069, 9, 0, 131070, 9, 0, 131071, 1, 0, 65536, 9, 0, 65537, 9, 0, 65538, 9, 0, 65539, 9, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, -1610612734, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 1, 0, 65550, 2, 0, 65551, -1610612734, 0, 65552, -1610612734, 0, 65553, 1, 0, 196600, 1, 0, 196601, -1610612734, 0, 196602, -1610612734, 0, 196603, -1610612734, 0, 196604, -1610612734, 0, 196605, 9, 0, 196606, 9, 0, 196607, 9, 0, 131072, 9, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 1, 0, 131086, 2, 0, 131087, -1610612734, 0, 131088, -1610612734, 0, 131089, 1, 0, 262136, 1, 0, 262137, -1610612734, 0, 262138, -1610612734, 0, 262139, -1610612734, 0, 262140, -1610612734, 0, 262141, 9, 0, 262142, 9, 0, 262143, 9, 0, 196608, 9, 0, 196609, 9, 0, 196610, 9, 0, 196611, 9, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 1, 0, 196622, 2, 0, 196623, -1610612734, 0, 196624, -1610612734, 0, 196625, 1, 0, 327672, 1, 0, 327673, -1610612734, 0, 327674, -1610612734, 0, 327675, -1610612734, 0, 327676, -1610612734, 0, 327677, 9, 0, 327678, 9, 0, 327679, 1, 0, 262144, 9, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, -1610612734, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 1, 0, 262158, 2, 0, 262159, -1610612734, 0, 262160, -1610612734, 0, 262161, 1, 0, 393208, 1, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 9, 0, 393214, 9, 0, 393215, 1, 0, 327680, 9, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, -1610612734, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 1, 0, 327694, 2, 0, 327695, -1610612734, 0, 327696, -1610612734, 0, 327697, 1, 0, 458744, 1, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 9, 0, 458750, 9, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 2, 0, 393231, -1610612734, 0, 393232, -1610612734, 0, 393233, 1, 0, 524280, 1, 0, 524281, -1610612734, 0, 524282, -1610612734, 0, 524283, -1610612734, 0, 524284, -1610612734, 0, 524285, 9, 0, 524286, 9, 0, 524287, 9, 0, 458752, 9, 0, 458753, 9, 0, 458754, 9, 0, 458755, 1, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 1, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 9, 0, 458766, 2, 0, 458767, -1610612734, 0, 458768, -1610612734, 0, 458769, 1, 0, 589816, 1, 0, 589817, -1610612734, 0, 589818, -1610612734, 0, 589819, -1610612734, 0, 589820, -1610612734, 0, 589821, 9, 0, 589822, 9, 0, 589823, 9, 0, 524288, 9, 0, 524289, 9, 0, 524290, 9, 0, 524291, 1, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 1, 0, 524298, 9, 0, 524299, 9, 0, 524300, 9, 0, 524301, 9, 0, 524302, 2, 0, 524303, -1610612734, 0, 524304, -1610612734, 0, 524305, 1, 0, 655352, 1, 0, 655353, -1610612734, 0, 655354, -1610612734, 0, 655355, -1610612734, 0, 655356, -1610612734, 0, 655357, 6, 0, 655358, 6, 0, 655359, 6, 0, 589824, 6, 0, 589825, 6, 0, 589826, 6, 0, 589827, 1, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 1, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, -1610612734, 0, 589839, -1610612734, 0, 589840, -1610612734, 0, 589841, 1, 0, 720888, 1, 0, 720889, -1610612734, 0, 720890, -1610612734, 0, 720891, -1610612734, 0, 720892, -1610612734, 0, 720893, 6, 0, 720894, 6, 0, 720895, 6, 0, 655360, 6, 0, 655361, 6, 0, 655362, 6, 0, 655363, 1, 0, 655364, -1610612734, 0, 655365, -1610612734, 0, 655366, -1610612734, 0, 655367, -1610612734, 0, 655368, -1610612734, 0, 655369, 1, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, -1610612734, 0, 655375, -1610612734, 0, 655376, -1610612734, 0, 655377, 1, 0, 786424, 1, 0, 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 786435, 1, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 1, 0, 851971, 1, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 1, 0, 917507, 1, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 1, 0, 983043, 1, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 1, 0, 1048579, 1, 0, 1048580, -1610612734, 0, 1048581, -1610612734, 0, 1048582, -1610612734, 0, 1048583, -1610612734, 0, 1048584, -1610612734, 0, 1048585, 1, 0, 1114115, -1610612735, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 1, 0, 1179651, -1610612735, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 1, 0, 1245187, -1610612735, 0, 1245188, 2, 0, 1245189, 2, 0, 1245190, 2, 0, 1245191, 2, 0, 1245192, 2, 0, 1245193, 1, 0, 1310723, -1610612735, 0, 1310724, -1610612735, 0, 1310725, -1610612735, 0, 1310726, -1610612735, 0, 1310727, -1610612735, 0, 1310728, -1610612735, 0, 1310729, -1610612735, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMapWall" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( -196616, 5, 0, -196615, 4, 0, -196614, 4, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 0, -262142, 4, 0, -262141, 4, 0, -262140, 4, 0, -262139, 4, 0, -262138, 4, 0, -262137, 4, 0, -262136, 4, 0, -262135, 4, 0, -262131, 4, 0, -262130, 4, 0, -262129, 4, 0, -262128, 4, 0, -262127, 536870917, 0, -131080, -1610612732, 0, -196591, -1610612732, 0, -65544, -1610612732, 0, -131055, -1610612732, 0, -8, -1610612732, 0, -1, 5, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, -1610612731, 0, -65519, -1610612732, 0, 65528, -1610612732, 0, 65535, -1610612732, 0, 13, -1610612732, 0, 17, -1610612732, 0, 131064, -1610612732, 0, 131071, -1610612732, 0, 65549, -1610612732, 0, 65553, -1610612732, 0, 196600, -1610612732, 0, 131085, -1610612732, 0, 131089, -1610612732, 0, 262136, -1610612732, 0, 196621, -1610612732, 0, 196625, -1610612732, 0, 327672, -1610612732, 0, 327679, -1610612732, 0, 262157, -1610612732, 0, 262161, -1610612732, 0, 393208, -1610612732, 0, 393215, -1610612732, 0, 327693, -1610612732, 0, 327697, -1610612732, 0, 458744, -1610612732, 0, 458751, -1073741819, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, -1610612731, 0, 393225, 5, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, -536870907, 0, 393233, -1610612732, 0, 524280, -1610612732, 0, 458755, -1610612732, 0, 458761, -1610612732, 0, 458769, -1610612732, 0, 589816, -1610612732, 0, 524291, -1610612732, 0, 524297, -1610612732, 0, 524305, -1610612732, 0, 655352, -1610612732, 0, 589827, -1610612732, 0, 589833, -1610612732, 0, 589841, -1610612732, 0, 720888, -1610612732, 0, 655363, -1610612732, 0, 655369, -1610612732, 0, 655377, -1610612732, 0, 786424, -1073741819, 0, 786425, 4, 0, 786426, 4, 0, 786427, 4, 0, 786428, 4, 0, 786429, 4, 0, 786430, 4, 0, 786431, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, -1610612732, 0, 720905, -1610612732, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 1610612741, 0, 786435, -1610612732, 0, 786441, -1610612732, 0, 851971, -1610612732, 0, 851977, -1610612732, 0, 917507, -1610612732, 0, 917513, -1610612732, 0, 983043, -1610612732, 0, 983049, -1610612732, 0, 1048579, -1610612732, 0, 1048585, -1610612732, 0, 1114115, -1610612732, 0, 1114121, -1610612732, 0, 1179651, -1610612732, 0, 1179657, -1610612732, 0, 1245187, -1610612732, 0, 1245193, -1610612732, 0, 1310723, -1073741819, 0, 1310724, 4, 0, 1310725, 4, 0, 1310726, 4, 0, 1310727, 4, 0, 1310728, 4, 0, 1310729, 1610612741, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" parent="." instance=ExtResource( 4 )]
rotating = true
target = NodePath("../Mech")

[node name="Key_Blue" parent="." instance=ExtResource( 5 )]
position = Vector2( 371.056, 822.569 )

[node name="Key_Green" parent="." instance=ExtResource( 6 )]
position = Vector2( 451.265, 755.262 )

[node name="Key_Red" parent="." instance=ExtResource( 7 )]
position = Vector2( 547.327, 857.857 )

[node name="MineOne_01" parent="." instance=ExtResource( 8 )]
position = Vector2( 78, 220 )

[node name="MineTwo_01" parent="." instance=ExtResource( 9 )]
position = Vector2( 272, 162 )

[node name="Sezam" parent="." instance=ExtResource( 10 )]
position = Vector2( 734.28, -445.089 )

[node name="CopperCoin_1" parent="." instance=ExtResource( 11 )]
position = Vector2( 737.579, 58.7733 )

[node name="SilverCoin_1" parent="." instance=ExtResource( 12 )]
position = Vector2( -44.7169, -137.418 )

[node name="SilverCoin_2" parent="." instance=ExtResource( 12 )]
position = Vector2( 110.858, -133.214 )

[node name="SilverCoin_3" parent="." instance=ExtResource( 12 )]
position = Vector2( 985.607, -121.853 )

[node name="SilverCoin_4" parent="." instance=ExtResource( 12 )]
position = Vector2( 990.151, 80.3614 )

[node name="GoldCoin_01" parent="." instance=ExtResource( 13 )]
position = Vector2( 745.593, 131.296 )

[node name="GoldCoin_02" parent="." instance=ExtResource( 13 )]
position = Vector2( 741.048, 249.444 )

[node name="Elixir_01" parent="." instance=ExtResource( 14 )]
position = Vector2( 290.826, 1122.4 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_02" parent="." instance=ExtResource( 14 )]
position = Vector2( 381.709, 1122.4 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_03" parent="." instance=ExtResource( 14 )]
position = Vector2( 506.673, 1124.68 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_04" parent="." instance=ExtResource( 14 )]
position = Vector2( 299.914, 1238.28 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_05" parent="." instance=ExtResource( 14 )]
position = Vector2( 365.804, 1240.55 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_06" parent="." instance=ExtResource( 14 )]
position = Vector2( 427.15, 1240.55 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_07" parent="." instance=ExtResource( 14 )]
position = Vector2( 515.761, 1240.55 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_08" parent="." instance=ExtResource( 14 )]
position = Vector2( 24.9929, 486.224 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_09" parent="." instance=ExtResource( 14 )]
position = Vector2( -98.3663, 345.242 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_10" parent="." instance=ExtResource( 14 )]
position = Vector2( -88.2961, -27.3532 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_11" parent="." instance=ExtResource( 14 )]
position = Vector2( -408.023, 131.251 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_12" parent="." instance=ExtResource( 14 )]
position = Vector2( -405.505, 209.295 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_13" parent="." instance=ExtResource( 14 )]
position = Vector2( -405.505, 209.295 )
scale = Vector2( 0.5, 0.5 )

[node name="Elixir_14" parent="." instance=ExtResource( 14 )]
position = Vector2( -402.988, 312.514 )
scale = Vector2( 0.5, 0.5 )

[node name="Tower_01" parent="." instance=ExtResource( 15 )]
position = Vector2( 551.013, 313.659 )

[node name="Tower_02" parent="." instance=ExtResource( 15 )]
position = Vector2( 273.995, 306.07 )

[node name="Tower_03" parent="." instance=ExtResource( 15 )]
position = Vector2( 406.812, 313.659 )

[node name="Mech" parent="." instance=ExtResource( 16 )]
position = Vector2( 453.288, 587.238 )
bullet_caliber = 100.0

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true
